# 2024_Kalinin_mAP

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run_all_data.sh
experiments/1_simulations/: .gitignore  0_run_simulations.py  1_plot_simulations_results.ipynb  1_plot_simulations_results.py  README.md  config.yaml  simulation_utils.py
experiments/1_simulations/results/: fig2_results.csv  fig3_results.csv  fig_s3_results.csv  fig_s4_results.csv  fig_s5_corr_results.csv  fig_s5_euc_results.csv
experiments/2_cellhealth/: .gitignore  0_download_data.sh  0_download_preprocess_data.ipynb  1_plate_well_position_effect.ipynb  1_preprocess_data.py  2_phenotypic_activity.ipynb  2_plate_well_position_effect.py  3_channel_compartment_analyses.ipynb  3_channel_compartment_analysis.py  4_phenotypic_activity.py  4_phenotypic_consistency.ipynb  5_phenotypic_consistency.py  README.md  cell_health_utils.py  run_all_cellhealth.sh
experiments/2_cellhealth/results/: phenotypic_activity_empty.csv  phenotypic_activity_map.csv  plate_well_position_map.csv
experiments/3_cpg0004/: 1_phenotypic_activity.ipynb  1_plot_map.py  2_phenotypic_consistency.ipynb  README.md  Snakefile  config.json  lincs.py  run_all_cpg0004.sh
experiments/4_cpg0016orf/: .gitignore  0_download_data.sh  0_plot_map_results.ipynb  1_phenotypic_activity_orf.py  2_phenotypic_consistency_corum_complex.py  3_plot_map_results.py  README.md  orf_utils.py  run_all_cpg0016orf.sh
experiments/5_nelisa/: .gitignore  0_preprocess_profiles.ipynb  0_preprocess_profiles.py  1_calculate_map.ipynb  1_calculate_map.py  2_plot_map.ipynb  2_plot_map.py  README.md  nelisa_utils.py  run_all_nelisa.sh
experiments/5_nelisa/inputs/: nelisa_profiles.parquet
experiments/6_perturbseq/: .gitignore  0_download_data.sh  0_download_perturbseq.ipynb  1_process_perturbseq.ipynb  1_process_perturbseq.r  2_finalize_perturbseq.ipynb  2_finalize_perturbseq.py  3_calculate_map_perturbseq.ipynb  3_calculate_map_perturbseq.py  4_plot_map_perturbseq.py  README.md  run_all_perturbseq.sh
experiments/6_perturbseq/results/: GSE132080_map.tsv
experiments/7_mitocheck/: 0_download_data.py  0_download_data.sh  1_prepare_data.py  1_preprocess_mitocheck.py  2_calculate_map.py  3_plot_map.py  README.md  mitocheck_plot_utils.py  run_all_mitocheck.sh
experiments/7_mitocheck/data/processed/: Metadata_Gene_ap_results.csv  Mitocheck_Phenotypic_Class_ap_results.csv
map_utils/: map.py  plot.py
map_utils/eval_metrics/: __init__.py  evaluate.py  generate_data.py  kmeans.py  mean_ap.py  mmd.py  mp_value.py
map_utils/fonts/: LICENSE
