[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "map_utils"
version = "0.1"
dependencies = [
    "scipy>=1.9",
    "seaborn>0.13",
    "copairs>=0.4.2",
    "umap-learn>=0.5.6",
    "scikit-learn>=1.3",
    "pycytominer@git+https://github.com/alxndrkalinin/pycytominer#fix-ops-custom-features"
]
requires-python = ">=3.9"
authors = [
  {name = "Alexandr Kalinin", email = "akalinin@broadinstitute.org"},
]
description = "Utilities for the (Kalinin et al., 2024) mAP paper"
readme = "README.md"
license = {file = "LICENSE"}

[tool.setuptools]
packages = ["map_utils"]

[project.optional-dependencies]
dev = [
    "ruff"
]

[tool.setuptools.package-data]
map_utils = ["fonts/*.ttf"]